# stash-image-tagger

./: LICENSE  README.md  pyproject.toml
stash-image-tagger/: main.py
